# plunger-binding

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/common/: mod.rs  plunger_error.rs  probe_info.rs
src/eraser/: base_eraser.rs  eraser_binding.rs  eraser_error.rs  generic_eraser.rs  mod.rs  stm32l0_eraser.rs
src/flasher/: generic_flasher.rs  mod.rs
src/identifier/: base_identifier.rs  identifier_binding.rs  mod.rs  stm32l0_identifier.rs
src/probe/: mod.rs  probe_binding.rs
