[package]
edition = "2018"
name = "plunger-binding"
version = "1.1.1"
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "1", features = ["serde-json", "tokio_rt"] }
napi-derive = "1"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "1.9.3", features = ["hex"] }
probe-rs = { version = "0.11.0" }
thiserror = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta.2"
rusb = "0.8"
radix_fmt = "1.0.0"
crc = "2.0"
lazy_static = "1.4.0"
tokio = { version = "1.8.0", features = ["full"] }
udev = "0.6.2"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
